[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/decorative/decorative/coatRack.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/guage.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/FSPressure.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/interact/Pressure.gd" type="Script" id=4]
[ext_resource path="res://scenes/pickup/PadlockKeys.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/interactive/interactive/guageFinished.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 58.75 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 45 )

[node name="PressureGuage" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FSPressure" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CoatRack" type="Sprite" parent="Area2D"]
position = Vector2( 320, 230 )
texture = ExtResource( 1 )

[node name="Guage" type="Sprite" parent="Area2D"]
position = Vector2( 290, 190 )
texture = ExtResource( 2 )

[node name="GuageFinished" type="Sprite" parent="Area2D"]
position = Vector2( 290, 190 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 288, 213.75 )
shape = SubResource( 2 )

[node name="PadlockKey" parent="Area2D" instance=ExtResource( 5 )]
position = Vector2( -30, 40 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 287.5, 215 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
